# ShapeBlenderProject

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Polygon.h  ShapeBlender.h
scripts/: extract_contours.py
src/: Application.cpp  Polygon.cpp  ShapeBlender.cpp  main.cpp
